# opengl_learn

./: .gitignore  CMakeLists.txt  README.md
opengl_abst/: CMakeLists.txt
opengl_abst/src/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.hpp  main.cpp
opengl_basic/: CMakeLists.txt
opengl_basic/src/: main.cpp
opengl_proj/: CMakeLists.txt
opengl_proj/res/shaders/: basic.shader
opengl_proj/src/: main.cpp
opengl_testable/: CMakeLists.txt
opengl_testable/src/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Texture.cpp  VertexBuffer.cpp  VertexBuffer.hpp  main.cpp
opengl_testable/src/tests/: Test.cpp  Test.hpp  TestClearColor.cpp  TestClearColor.hpp  TestTexture2D.cpp  TestTexture2D.hpp
res/shaders/: basic.shader
